[package]
name = "cargo-bill"
version = "0.1.5"
edition = "2021"
authors = ["0xboji"]
description = "A Rust CLI tool that estimates AWS Lambda costs based on the compiled binary size."
license = "MIT"
repository = "https://github.com/0xBoji/cargo-bill"
homepage = "https://github.com/0xBoji/cargo-bill"
documentation = "https://docs.rs/cargo-bill"
readme = "README.md"
keywords = ["aws", "lambda", "finops", "cost", "cli"]
categories = ["command-line-utilities", "development-tools::cargo-plugins"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.37", features = ["full"] }
object = "0.36"
prettytable-rs = "^0.10"
cargo_metadata = "0.18"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
aws-config = "1.8.15"
aws-sdk-pricing = "1.99.0"
anyhow = "1.0.102"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
toml = "0.8"
colored = "2.1"
